implement waypoints and upload and download of paths

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     </tbody>
   </table>
 
-  <input type="file" id="upl" style="display:none;">
+  <input type="file" id="upload" style="display:none;">
 </body>
 
 </html>
