add draw robot feature

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
   <input id="title" placeholder="Title">
   <div style="text-align:center;">
     <svg id="field" height="324" width="652">
-      <path id="path" stroke="black" fill="transparent" />
-
+      <!-- <path id="path" stroke="black" fill="transparent" /> -->
     </svg>
   </div>
   <div class="buttonContainer">
