add waypoint enable/disable option and improve grid

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       <th>Heading</th>
       <th>Speed</th>
       <th>Comments</th>
+      <th>Enabled</th>
       <th>Delete</th>
     </thead>
     <tbody>
