--- a/index.html
+++ b/index.html
@@ -9,14 +9,12 @@
   <!-- <script src="filesaver.js"></script> -->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
-  <script type="text/javascript" src="spline.js"></script>
-  <script type="text/javascript" src="script.js"></script>
 
 </head>
 
 <body onload="init()">
   <input id="title" placeholder="Title">
-  <div style="text-align:center;">
+  <div id="field-container" style="text-align:center;">
     <svg id="field" height="324" width="652">
       <!-- <path id="path" stroke="black" fill="transparent" /> -->
     </svg>
@@ -25,6 +23,7 @@
     <button onclick="addPoint()">Add Point</button>
     <button onclick="exportData()">Download</button>
     <button onclick="importData()">Import</button>
+    <button onclick="downloadImage()">Image</button>
     <!-- <button onclick="flipField()">Flip Field</button> -->
     <!-- <span style="font-size: 15px; float: right;">Is reversed: <input type="checkbox" id="isReversed"></span> -->
   </div>
@@ -45,5 +44,7 @@
 
   <input type="file" id="upload" style="display:none;">
 </body>
+<script type="text/javascript" src="spline.js"></script>
+<script type="text/javascript" src="script.js"></script>
 
 </html>
