--- a/index.html
+++ b/index.html
@@ -2,11 +2,9 @@
 <html>
 
 <head>
-  <title>Robo Odyssey</title>
+  <title>Robot Odyssey</title>
   <link href="stylesheet.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <!-- <script src="blob.js"></script> -->
-  <!-- <script src="filesaver.js"></script> -->
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
 
@@ -16,14 +14,14 @@
   <input id="title" placeholder="Title">
   <div id="field-container" style="text-align:center;">
     <svg id="field" height="324" width="652">
-      <!-- <path id="path" stroke="black" fill="transparent" /> -->
     </svg>
   </div>
+  <img id="image"></img>
   <div class="buttonContainer">
     <button onclick="addPoint()">Add Point</button>
-    <button onclick="exportData()">Download</button>
-    <button onclick="importData()">Import</button>
-    <button onclick="downloadImage()">Image</button>
+    <button onclick="exportData()">Download Path</button>
+    <button onclick="importData()">Import Path</button>
+    <button onclick="downloadImage()">Download Image</button>
     <!-- <button onclick="flipField()">Flip Field</button> -->
     <!-- <span style="font-size: 15px; float: right;">Is reversed: <input type="checkbox" id="isReversed"></span> -->
   </div>
