add images folder and team branding

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
+  <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 
@@ -41,8 +42,22 @@
   </table>
 
   <input type="file" id="upload" style="display:none;">
+  <footer>
+    <address>
+      ©2018-2019 Vikings
+    </address>
+    <address>
+      <a href="http://ljrobotics.org/">ljrobotics.org</a>
+    </address>
+    <a href="https://github.com/FRCTeam2984"><img src="/images/octo-cat.jpg" alt="Github"></a>
+    <a href="https://discordapp.com/invite/RshDdxa"><img src="/images/discord-logo.jpg" alt="Discord"></a>
+    <a href="https://thefoundationoflajollahigh.formstack.com/forms/academic_robotics_team"><img src="/images/donate-button.png"
+        alt="Donate"></a>
+
+  </footer>
 </body>
 <script type="text/javascript" src="spline.js"></script>
 <script type="text/javascript" src="script.js"></script>
+
 
 </html>
