Readd download image functions

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
     <button onclick="addPoint()">Add Point</button>
     <button onclick="exportData()">Download Path</button>
     <button onclick="importData()">Import Path</button>
+    <button onclick="downloadImage()">Download Image</button>
     <!-- <button onclick="flipField()">Flip Field</button> -->
     <!-- <span style="font-size: 15px; float: right;">Is reversed: <input type="checkbox" id="isReversed"></span> -->
   </div>
