--- a/index.html
+++ b/index.html
@@ -23,7 +23,10 @@
     <button onclick="addPoint()">Add Point</button>
     <button onclick="exportData()">Download Path</button>
     <button onclick="importData()">Import Path</button>
-    <button onclick="downloadImage()">Download Image</button>
+    <button id="odometry" onclick="drawOdometry()">Enable Odometry</button>
+    <button onclick="invertPath()">Invert Path</button>
+
+    <!-- <button onclick="downloadImage()">Download Image</button> -->
     <!-- <button onclick="flipField()">Flip Field</button> -->
     <!-- <span style="font-size: 15px; float: right;">Is reversed: <input type="checkbox" id="isReversed"></span> -->
   </div>
@@ -32,8 +35,6 @@
       <th>X</th>
       <th>Y</th>
       <th>Heading</th>
-      <th>Speed</th>
-      <th>Comments</th>
       <th>Enabled</th>
       <th>Delete</th>
     </thead>
