Replace field image, convert units to meters

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body onload="init()">
   <input id="title" placeholder="Title">
   <div id="field-container" style="text-align:center;">
-    <svg id="field" height="324" width="652">
+    <svg id="field">
     </svg>
   </div>
   <img id="image"></img>
@@ -38,26 +38,19 @@
       <th>Enabled</th>
       <th>Delete</th>
     </thead>
-    <tbody>
-
+    <tbody id="poseinput">
     </tbody>
   </table>
 
   <input type="file" id="upload" style="display:none;">
   <footer>
     <address>
-      ©2018-2019 Vikings
+      ©2018-2019 The Vikings
     </address>
-    <address>
-      <a href="http://ljrobotics.org/">ljrobotics.org</a>
-    </address>
-    <a href="https://github.com/FRCTeam2984"><img src="/images/octo-cat.jpg" alt="Github"></a>
-    <a href="https://discordapp.com/invite/RshDdxa"><img src="/images/discord-logo.jpg" alt="Discord"></a>
 
   </footer>
 </body>
 <script type="text/javascript" src="spline.js"></script>
 <script type="text/javascript" src="script.js"></script>
-
 
 </html>
