--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <input id="title" placeholder="Title">
   <div id="field_container" style="text-align:center;">
     <svg id="field">
-      <g id="robot_start" class="robot"></g>
-      <g id="robot_end" class="robot"></g>
       <path id="path"></path>
-      <g id="robot_odometry" class="robot"></g>
+      <g id="robotStart" class="robot"></g>
+      <g id="robotEnd" class="robot"></g>
       <path id="odometry"></path>
+      <g id="robotOdometry" class="robot"></g>
       <g id="points"></g>
     </svg>
   </div>
@@ -41,7 +41,7 @@
       <th>Enabled</th>
       <th>Delete</th>
     </thead>
-    <tbody id="poseinput">
+    <tbody id="poseInput">
     </tbody>
   </table>
 
@@ -53,7 +53,7 @@
 
   </footer>
 </body>
-<script type="text/javascript" src="spline.js"></script>
 <script type="text/javascript" src="script.js"></script>
+<script type="text/javascript" src="filehandling.js"></script>
 
 </html>
