Add shadows and field flipping

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <div class="buttonContainer">
     <button onclick="addPoint()">Add Point</button>
     <button onclick="invertPath()">Invert Path</button>
+    <button onclick="toggleField()">Flip Field</button>
     <button onclick="exportData()">Download Path</button>
     <button onclick="importData()">Import Path</button>
     <button id="toggle_odometry" onclick="toggleOdometry()">Enable Odometry</button>
