--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </div>
   <img id="image"></img>
   <div class="buttonContainer">
-    <button onclick="addPoint()">Add Point</button>
+    <button onclick="addPose()">Add Pose</button>
     <button onclick="invertPath()">Invert Path</button>
     <button onclick="toggleField()">Flip Field</button>
     <button onclick="exportData()">Download Path</button>
