Add reverse path button and make y axis change signs

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
   <div class="buttonContainer">
     <button onclick="addPose()">Add Pose</button>
     <button onclick="invertPath()">Invert Path</button>
+    <button onclick="reverse()">Reverse Path</button>
     <button onclick="toggleField()">Flip Field</button>
     <button onclick="exportData()">Download Path</button>
     <button onclick="importData()">Import Path</button>
     <button id="toggle_odometry" onclick="toggleOdometry()">Enable Odometry</button>
+
     <h id="state"></h>
   </div>
   <table>
